--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
     "axios": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
