--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.15",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "jotai": "^2.6.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
