--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.15",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^10.16.16",
     "jotai": "^2.6.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
