--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
-    "@mui/material": "^5.14.15",
+    "@mui/joy": "^5.0.0-beta.20",
+    "@mui/material": "^5.15.2",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "jotai": "^2.6.0",
